--- a/BusinessCore/BusinessCore.csproj
+++ b/BusinessCore/BusinessCore.csproj
@@ -46,6 +46,8 @@
     <Compile Include="Color.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Door.cs" />
+    <Compile Include="Truck.cs" />
+    <Compile Include="Vehicle.cs" />
     <Compile Include="Wheel.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
